modules/gdscript/tests/scripts/parser/errors/export_hard_refcounted.gd
@export_storage var test_storage_hard_refc: RefCounted
